--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "description": "SDK for Interkassa",
   "keywords": ["interkassa","pay"],
-  "homepage": "https://github.com/interkassa/php-sdk-v1",
+  "homepage": "https://github.com/interkassa/php-sdk",
   "license": "MIT",
   "authors": [
     {
